[package]
name = "bevy_mod_spritesheet"
description = "Create TextureAtlasLayouts from sprite sheet formats, such as JSON Array, and specify them on components by frame name"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "bevy_asset",
    "bevy_sprite",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[features]
json-array = []
json-hash = []
default = ["json-array", "json-hash"]

[[example]]
name = "json_array"

[[example]]
name = "json_hash"

[[example]]
name = "bevy_web_asset"

[dev-dependencies]
bevy = "0.13.1"
bevy-inspector-egui = "0.23.4"
bevy_web_asset = "0.8.0"
