[package]
name = "bevy_mod_spritesheet"
description = "Create TextureAtlasLayouts from common sprite sheet formats"
license = "MIT"
version = "0.2.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "bevy_asset",
    "bevy_sprite",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
thiserror = "1"

[features]
default = ["json-array", "json-hash"]
json-array = ["serde_json"]
json-hash = ["serde_json"]

[[example]]
name = "json_array"

[[example]]
name = "json_hash"

[[example]]
name = "bevy_web_asset"

[[example]]
name = "without_texture_loading"

[dev-dependencies]
bevy = "0.13.1"
bevy-inspector-egui = "0.23.4"
bevy_web_asset = "0.8.0"
