[package]
name = "bevy_mod_spritesheet"
repository = "https://github.com/danielfeather/bevy_mod_spritesheet"
categories = [
    "game-development",
]
keywords = ["bevy", "spritesheet", "texture", "atlas", "gamedev"]
description = "Create TextureAtlasLayouts from common sprite sheet formats"
license = "MIT"
version = "0.3.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_asset",
    "bevy_sprite",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
thiserror = "1"

[features]
default = ["json-array", "json-hash"]
json-array = ["serde_json"]
json-hash = ["serde_json"]

[[example]]
name = "json_array"

[[example]]
name = "json_hash"

[[example]]
name = "bevy_web_asset"

[[example]]
name = "without_texture_loading"

[[example]]
name = "timer"

[dev-dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_sprite",
    "bevy_asset",
    "png",
    "x11",
    "webgl2",
]}
bevy-inspector-egui = "0.25"
bevy_web_asset = "0.9"
